pre-release 05-Nov-2024

--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
 	"name"       : "node-tee",
 	"version"    : "1.0.0",
-	"description": "A Node.js implementation of tee, as specified by POSIX/SUSv3.",
+	"description": "A Node.js implementation of the 'tee' command, as developed by (GNU coreutils) 8.32.",
 	"main"       : "index.js",
 	"type"       : "module",
 	"scripts": {
 		"test"  : "node test/tee.test.js",
 		"start" : "node lib/tee.js"
 	},
-	"keywords": [],
+	"bin": {
+		"node-tee": "bin/node-tee"
+	},
+	"keywords": ["coreutils", "command", "tee", "posix"],
 	"author"   : {
 		"name" : "Essam A. El-Sherif",
 		"email": "esm.elsh@gmail.com",
 		"url"  : "https://essamonline.net/resume-it.html"
 	},
-    "homepage" : "https://github.com/essamatefelsherif/node-tee.git",
+	"homepage" : "https://github.com/essamatefelsherif/node-tee.git",
 	"repository": {
 		"type": "git",
 		"url" : "git+https://github.com/essamatefelsherif/node-tee.git"
