--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
 	"name"       : "node-tee",
 	"version"    : "1.0.0",
-	"description": "A Node.js implementation of the 'tee' command, as developed by (GNU coreutils) 8.32.",
+	"description": "A Node.js implementation of the (GNU coreutils) 'tee' command version 8.32.",
 	"main"       : "index.js",
 	"type"       : "module",
 	"scripts": {
-		"test"  : "node test/tee.test.js",
-		"start" : "node lib/tee.js"
+		"test"  : "node test/node-tee.test.js",
+		"start" : "node lib/node-tee.js"
 	},
 	"bin": {
 		"node-tee": "bin/node-tee"
