--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-	"name"       : "node-tee",
+	"name"       : "@coreutils/node-tee",
 	"version"    : "1.0.0",
 	"description": "A Node.js implementation of the (GNU coreutils) 'tee' redirection command version 8.32.",
-	"main"       : "index.js",
+	"main"       : "lib/node-tee.js",
 	"type"       : "module",
 	"scripts": {
 		"test"  : "node test/node-tee-test.js",
