--- a/.lcovrc
+++ b/.lcovrc
@@ -81,11 +81,11 @@ genhtml_sort = 1
 
 # Include function coverage data display (can be disabled by the
 # --no-func-coverage option of genhtml)
-#genhtml_function_coverage = 1
+genhtml_function_coverage = 1
 
 # Include branch coverage data display (can be disabled by the
 # --no-branch-coverage option of genhtml)
-#genhtml_branch_coverage = 1
+genhtml_branch_coverage = 1
 
 # Specify the character set of all generated HTML pages
 genhtml_charset=UTF-8
@@ -150,7 +150,7 @@ lcov_modprobe_tool = /sbin/modprobe
 lcov_rmmod_tool = /sbin/rmmod
 
 # Location for temporary directories
-lcov_tmp_dir = /tmp
+lcov_tmp_dir = tmp/genhtml
 
 # Show full paths during list operation if non-zero (same as --list-full-path
 # option of lcov)
@@ -169,4 +169,4 @@ lcov_list_truncate_max = 20
 lcov_function_coverage = 1
 
 # Specify if branch coverage data should be collected and processed.
-lcov_branch_coverage = 0
+lcov_branch_coverage = 1
