--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
 		"testHelp": "node test/node-tee.test.js -h",
 		"devGenhtml": "genhtml -o docs/coverage/node/genhtml --config-file .lcovrc docs/coverage/node/*.info",
 		"devDoc": "rm -fr docs/jsdoc/* && jsdoc lib/*.js test/*.js -d docs/jsdoc",
-		"devUpdate": "npm run testReport && npm run devGenhtml && npm run devDoc"
+		"devUpdate": "npm run testReport && npm run devGenhtml && npm run devDoc",
+		"devCoveralls": "COVERALLS_REPO_TOKEN=9FUY3DOuwfNNQv1nA59mdTFAzheYEFlB8 cat docs/coverage/node/lcov.info | coveralls"
 	},
 	"bin": {
 		"node-tee": "bin/node-tee",
